Portfolio ontent added

--- a/app/views/content/home.ejs
+++ b/app/views/content/home.ejs
@@ -1,2 +1,6 @@
 <h1> <%= title %> </h1>
-    Hello World from controller
+   
+<h3>
+    Greetings !
+    <small class="text-muted"> - Thank you for visiting my portfolio</small>
+  </h3>
