--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,18 +7,25 @@
     <title>
         <%= title %>
     </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./content/app.css">
 </head>
 <body>
     <!--header-->
    <%- include('components/header.ejs') %>
-
+   <img src="./content/images/purpleBrick.jpg" width="30%" height="auto">  </img>
    <!--main-->
    <main>
-    <%- include('content/home.ejs') %>
+    <%- include('content/' + page + '.ejs') %>
+    
    </main>
     
 
    <!--footer-->
    <%- include('components/footer.ejs') %>
+   
+   <!--scripts-->
+   <script src="https://kit.fontawesome.com/c9893c6434.js" crossorigin="anonymous"></script>
 </body>
 </html>
