--- a/app/views/components/footer.ejs
+++ b/app/views/components/footer.ejs
@@ -1,5 +1,9 @@
 <footer>
-<nav>
-    <ul><li>how to contact</li><li>linkedin</li></ul>
-</nav>
+
+  
+    <p class="text-white-50 bg-dark">
+        <i class="fa-regular fa-copyright"></i>Elif Bilge Canatan-COMP229-F2022-402
+    </p>
+    
+
 </footer>
