--- a/app/views/content/hobbies.ejs
+++ b/app/views/content/hobbies.ejs
@@ -1,7 +1,16 @@
-<h1> <%= title %> </h1>
+<h3>
+ Hobbies
+
+  <small class="text-muted"> - Here are some of my favourite things in life:</small>
+</h3>
+<br>
 
 <ul class="fa-ul">
     
-    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>replace bullets</li>
-   
+    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Snowboarding.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Cats, more cats.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Fashion styling and personal style advising.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Travelling.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Perfumes.</li>
+
   </ul>
