--- a/app/views/content/projects.ejs
+++ b/app/views/content/projects.ejs
@@ -1,1 +1,9 @@
-<h1> <%= title %> </h1>
+<h3> <%= title %> </h3>
+<br>
+
+<p class="lead">
+    Currently I have no software projects.
+</p>
+<br>
+<br>
+
