--- a/app/views/content/about.ejs
+++ b/app/views/content/about.ejs
@@ -1,12 +1,16 @@
-<h1> <%= title %> </h1>
+
  
   <h3>
     About me
+  
     <small class="text-muted"> - Who is Elif?</small>
   </h3>
+  <br>
+  
   <p class="lead">
-    I am in   Health Informatics Technology program and it is my third semester. Near to my current education, I also have a BA in Economics, and have completed a certificate program in Fashion Management and Styling, and Google’s data analytics certificate program. Before coming to Canada, I was working in the defense industry in different roles. After immigration, I had a survival job at Tim Hortons as a baker.
+    I am studying at Centennial College Health Informatics Technology program and it is my third semester. Near to my current education, I also have a BA in Economics, and have completed a certificate program in Fashion Management and Styling, and Google’s data analytics certificate program. Before coming to Canada, I was working in the defense industry in different roles. After immigration, I had a survival job at Tim Hortons as a baker.
   Outside of education and work, I am a fashion enthusiast, and I love snowboarding, although I didt get a chance to do it here in Canada yet. I am also an animal lover.
   Changing careers and stepping into the tech world was a challenge by itself, but I find myself enjoying it more and more. I am willing to transition into a data administration role where I can further improve my knowledge.
-
   </p>
+  <br>
+  <br>
