Form submit cannot parse the input

--- a/app/views/content/contact.ejs
+++ b/app/views/content/contact.ejs
@@ -1,1 +1,25 @@
-<h1> <%= title %> </h1>
+<h3> <%= title %> </h3>
+
+<!--Form submit cannot parse the input, therefore showing CANNOT POST /home.ejs as an error when user press submit.-->
+<div class="container">
+
+    <form action="./home.ejs" method="post">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Enter your first name">
+  
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Enter your last name">
+  
+      <label for="country">Study term</label>
+      <select id="country" name="term">
+        <option value="1styear">1st year</option>
+        <option value="2ndyear">2nd year</option>
+        <option value="3rdyear">3rd year</option>
+      </select>
+  
+      <label for="message">Your Message</label>
+      <textarea id="subject" name="message" placeholder="Please write your message..." style="height:200px"></textarea>
+  
+      <input type="submit" value="Submit">
+    </form>
+  </div>
