Static files are working

--- a/app/views/content/projects.ejs
+++ b/app/views/content/projects.ejs
@@ -1,8 +1,11 @@
+<!--Elif Bilge Canatan- 301245216-COMP229-F2022-402 -->
+
 <h3> <%= title %> </h3>
 <br>
 
 <p class="lead">
-    Currently I have no software projects.
+    Currently I have no software projects. However, in the summer of 2021, I completed Google's Data Analytics certificate program where I completed a project on FitBit tracker's data analysis. I have also successfuly taken the Microsoft Azure Fundamentals Certification exam.
+
 </p>
 <br>
 <br>
