--- a/app/views/components/header.ejs
+++ b/app/views/components/header.ejs
@@ -1,3 +1,5 @@
+<!--Elif Bilge Canatan- 301245216-COMP229-F2022-402 -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><i class="fa-sharp fa-solid fa-shield-cat fa-2xl"></i> Elif B. Canatan</a>
