--- a/app/views/content/contact.ejs
+++ b/app/views/content/contact.ejs
@@ -1,3 +1,6 @@
+<!--Elif Bilge Canatan- 301245216-COMP229-F2022-402 -->
+
+
 <h3> <%= title %> </h3>
 
 <!--Form submit cannot parse the input, therefore showing CANNOT POST /home.ejs as an error when user press submit.-->
