--- a/app/views/content/hobbies.ejs
+++ b/app/views/content/hobbies.ejs
@@ -1,3 +1,5 @@
+<!--Elif Bilge Canatan- 301245216-COMP229-F2022-402 -->
+
 <h3>
  Hobbies
 
@@ -7,10 +9,10 @@
 
 <ul class="fa-ul">
     
-    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Snowboarding.</li>
-    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Cats, more cats.</li>
-    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Fashion styling and personal style advising.</li>
-    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Travelling.</li>
-    <li><span class="fa-li"><i class="fa-solid fa-spinner fa-pulse"></i></span>Perfumes.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Snowboarding.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Cats, more cats.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Fashion styling and personal style advising.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Travelling.</li>
+    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Perfumes.</li>
 
   </ul>
