--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,3 +1,5 @@
+<!--Elif Bilge Canatan- 301245216-COMP229-F2022-402 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,5 +38,6 @@
    
    <!--scripts-->
    <script src="https://kit.fontawesome.com/c9893c6434.js" crossorigin="anonymous"></script>
+   <script src="./scripts/app.js"> </script>
 </body>
 </html>
