--- a/public/content/app.css
+++ b/public/content/app.css
@@ -1,3 +1,5 @@
+/* Elif Bilge Canatan- 301245216-COMP229-F2022-402*/
+
 .column {
     float: left;
     width: 50%;
@@ -24,7 +26,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: #4e0b9b;
   color: white;
   padding: 12px 20px;
   border: none;
